--------
v5.0-git
--------

[mms] Fix printing multipage HTML messages in Mozilla browsers (Bug #8708).
[mms] Provide command line script to obtain IMAP caching statistics.
[mms] Catch flag changes from other IMAP clients when refreshing if CONDSTORE
      is available on the IMAP server (DIMP).
[mms] Improved forwarding options.
[mms] Add support for LIST-STATUS IMAP extension; provides more efficient
      mailbox polling.
[mms] Add hook to allow determination of compose attachments MIME type.
[mms] Move AJAX processing framework to Horde (Request #4561).
[mms] If selected message(s) disappear from mailbox, gracefully handle in the
      user interface (DIMP).
[mms] Only update search mailbox on explicit user action (Request #7297)
      (DIMP).
[mms] Add auto-save draft to IMP (Request #7656).
[mms] Add keyboard shortcut to move to next unseen message (Request #8223).
[mms] Add hook to dynamically change mailbox label (Request #6734).
[mms] Improved address expansion in MIMP.
[mms] Load folders on-demand in sidebar (DIMP).
[mms] Add priority setting to DIMP.
[mms] Simplify and improve priority header generation/display.
[mms] Add Face: header support to IMP.
[mms] Add splitbar to resize sidebar in DIMP.
[mms] Use LIST-EXTENDED IMAP extension (RFC 5258), if available, to get
      subscribed mailbox information.
[mms] Split ham/spam reporting actions into two separate preferences (Request
      #8221).
[mms] When clicking on base reply button, auto-determine the best way to
      reply to a message based on the header information.
[mms] Add vertical-pane preview layout to DIMP.
[mms] Wrap content-related MIME parts in a border when viewing inline to
      indicate their relationship.
[mms] For drafts, save the original message index for forwards/replies so when
      eventually sent, log information can be updated (Request #8663).
[mms] Upgrade RTE to CKEditor v3.
[mms] Sort by display name for to/from fields if supported on IMAP server.