@@ -52,7 +52,7 @@ var DimpFullmessage = {
 
         $('identity', 'last_identity').invoke('setValue', id);
 
-        DimpCompose.fillForm((i.id[2]) ? ("\n" + i.sig + r.body) : (r.body + "\n" + i.sig), r.header);
+        DimpCompose.fillForm((i.id[2]) ? ("\n" + i.sig + r.body) : (r.body + "\n" + i.sig), r.header, r.opts);
 
         if (r.fwd_list && r.fwd_list.length) {
             r.fwd_list.each(function(ptr) {
