@@ -122,6 +122,13 @@ $compose_disable = !IMP::canCompose();
      <ul id="attach_list" style="display:none"></ul>
     </td>
    </tr>
+   <tr id="noticerow" style="display:none">
+    <td colspan="2">
+     <ul class="notices">
+      <li class="replyallnotice" style="display:none"><?php echo Horde::img('alerts/message.png', _("Message"), null, $GLOBALS['registry']->getImageDir('horde')) ?> <?php echo sprintf(_("You are currently replying to ALL recipients. To reply only to the original sender, click %s."), '<a href="#" id="replyallclick">' . _("HERE") . '</a>') ?></li>
+     </ul>
+    </td>
+   </tr>
   </table>
  </div>
 
